tests/should-pass/shift/r.two-readers.fk
-- Regression for a bug concerning lift and expandAb, discovered by Sam.
-- Problem description in commit 86e0ecd2d

-- #desc Regression for bug concerning lift and expandAb, discovered by Sam.
-- #return 3

interface Reader S = ask : S

data Pair X Y = pair X Y

readPair : {[Reader X, Reader X](Pair X X)}
readPair! = pair (<Reader(1)> ask!) (ask!)

readPair' : {[Reader X, Reader X](Pair X X)}
readPair'! = pair (ask!) (<Reader(1)> ask!)

readPair'' : {[Reader X, Reader X](Pair X X)}
readPair''! = let x = <Reader(1)> ask! in
              let y = ask! in
              pair x y

-- begin BUG: this should type-check and behave as readPair and readPair''
-- but it fails to type-check!
-- (not anymore)
readPair''' : {[Reader X, Reader X](Pair X X)}
readPair'''! = let y = ask! in
               let x = <Reader(1)> ask! in
               pair x y
-- end BUG

runReader : {S -> <Reader S>X -> X}
runReader s <ask -> k> = runReader s (k s)
runReader _ x          = x

main : {Int}
main! = case (runReader 1 (runReader 2 readPair!)) {(pair x y) -> x + y}
